# loan_backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt  test_predict.py
ML/: engine.py  label_encoders.pkl  loan_default_v1  loan_risk_default_model.pkl  monitoring.py  prometheus_metrics.py
app/: main.py
core/: auth.py  config.py  email.py  jwt.py  security.py
db/: create_db.py  models.py  session.py
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: api.js  app.js
routes/: loan.py  monitoring.py
schemas/: loan.py  monitoring.py  token.py  user.py
