[project]
name = "loan-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "catboost>=1.2.10",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "joblib>=1.5.3",
    "pandas>=3.0.4",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.51",
    "supabase",
    "uvicorn>=0.49.0",
]
